# life

./: README.md  pyproject.toml
core/: board.py  config.py  game.py  generation.py  main.py  ui.py  utils.py
