[tool.poetry]
name = "life"
version = "0.1.0"
description = ""
authors = ["Renat Yakublevich <merlinincorp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
